--- a/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
+++ b/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
@@ -91,8 +91,7 @@
                                         <exclude reference="CIZ-Ml-nC2"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="110.5" y="525" width="154" height="30"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="CIZ-Ml-nC2"/>
                                     </mask>
@@ -406,7 +405,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                                         </variation>
                                     </imageView>
-                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4ni-rt-898" userLabel="containerView">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4ni-rt-898" userLabel="containerView">
                                         <rect key="frame" x="50" y="63" width="275" height="521"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="garim_small" translatesAutoresizingMaskIntoConstraints="NO" id="0xw-ka-5ly" userLabel="logo">
@@ -595,6 +594,16 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gca-og-DEn">
+                                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
+                                                <state key="normal" title="회원가입">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="eZE-di-Upd" kind="show" id="8MA-P5-Tf7"/>
+                                                </connections>
+                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bH9-ag-qoq">
                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                 <color key="backgroundColor" red="0.97647058819999999" green="0.1960784314" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -616,17 +625,7 @@
                                                     </mask>
                                                 </variation>
                                                 <connections>
-                                                    <segue destination="HYL-hH-4MM" kind="show" id="YvB-O2-bJT"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gca-og-DEn">
-                                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
-                                                <state key="normal" title="회원가입">
-                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                                <connections>
-                                                    <segue destination="sPw-AV-ZPR" kind="show" id="99I-7d-ny3"/>
+                                                    <segue destination="HYL-hH-4MM" kind="show" id="G4z-vV-ZPh"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -655,18 +654,15 @@
                                             <constraint firstItem="bH9-ag-qoq" firstAttribute="centerX" secondItem="4ni-rt-898" secondAttribute="centerX" id="k8v-zB-R6Q"/>
                                             <constraint firstItem="Gca-og-DEn" firstAttribute="centerX" secondItem="4ni-rt-898" secondAttribute="centerX" id="mxN-3E-iZO"/>
                                             <constraint firstAttribute="centerX" secondItem="U3Y-Bs-Bw6" secondAttribute="centerX" id="tsW-y2-3Ks"/>
+                                            <constraint firstAttribute="bottom" secondItem="Gca-og-DEn" secondAttribute="bottom" constant="24" id="ytn-X9-Qx3"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="subviews">
                                                 <exclude reference="0xw-ka-5ly"/>
-                                                <exclude reference="bH9-ag-qoq"/>
                                                 <exclude reference="Gca-og-DEn"/>
+                                                <exclude reference="bH9-ag-qoq"/>
                                             </mask>
                                             <mask key="constraints">
-                                                <exclude reference="gab-qm-74V"/>
-                                                <exclude reference="mxN-3E-iZO"/>
-                                                <exclude reference="FzY-Fw-R8B"/>
-                                                <exclude reference="k8v-zB-R6Q"/>
                                                 <exclude reference="YQ1-3z-enu"/>
                                                 <exclude reference="iOM-BP-tRg"/>
                                                 <exclude reference="0nk-bd-cdc"/>
@@ -674,19 +670,20 @@
                                                 <exclude reference="QmL-xh-eOL"/>
                                                 <exclude reference="hsq-mv-QQK"/>
                                                 <exclude reference="0nE-ty-0Ts"/>
+                                                <exclude reference="FzY-Fw-R8B"/>
+                                                <exclude reference="k8v-zB-R6Q"/>
+                                                <exclude reference="gab-qm-74V"/>
+                                                <exclude reference="mxN-3E-iZO"/>
+                                                <exclude reference="ytn-X9-Qx3"/>
                                             </mask>
                                         </variation>
                                         <variation key="widthClass=compact">
                                             <mask key="subviews">
                                                 <include reference="0xw-ka-5ly"/>
-                                                <include reference="bH9-ag-qoq"/>
                                                 <include reference="Gca-og-DEn"/>
+                                                <include reference="bH9-ag-qoq"/>
                                             </mask>
                                             <mask key="constraints">
-                                                <include reference="gab-qm-74V"/>
-                                                <include reference="mxN-3E-iZO"/>
-                                                <include reference="FzY-Fw-R8B"/>
-                                                <include reference="k8v-zB-R6Q"/>
                                                 <include reference="YQ1-3z-enu"/>
                                                 <include reference="iOM-BP-tRg"/>
                                                 <include reference="0nk-bd-cdc"/>
@@ -694,6 +691,11 @@
                                                 <include reference="QmL-xh-eOL"/>
                                                 <include reference="hsq-mv-QQK"/>
                                                 <include reference="0nE-ty-0Ts"/>
+                                                <include reference="FzY-Fw-R8B"/>
+                                                <include reference="k8v-zB-R6Q"/>
+                                                <include reference="gab-qm-74V"/>
+                                                <include reference="mxN-3E-iZO"/>
+                                                <include reference="ytn-X9-Qx3"/>
                                             </mask>
                                         </variation>
                                     </view>
@@ -739,7 +741,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="wrapperView" destination="Esz-DM-1D9" id="YL2-k5-daC"/>
+                        <outlet property="wrapperView" destination="Esz-DM-1D9" id="Ngw-df-u1a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vSZ-SB-j7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1095,6 +1097,9 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="64" width="375" height="547"/>
+                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="c4K-a7-9at" id="KvJ-RE-TKG"/>
                                     <outlet property="delegate" destination="c4K-a7-9at" id="RGB-HZ-gBW"/>
@@ -1155,6 +1160,9 @@
                                     <segment title="BEST"/>
                                 </segments>
                                 <color key="tintColor" red="0.99607843159999998" green="0.31764706970000001" blue="0.1215686277" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="16" y="28" width="343" height="29"/>
+                                </variation>
                                 <connections>
                                     <action selector="segmentedControlActionChanged:" destination="c4K-a7-9at" eventType="valueChanged" id="TKh-ch-Ffo"/>
                                 </connections>
@@ -1254,10 +1262,10 @@
             </objects>
             <point key="canvasLocation" x="1308.75" y="392.5"/>
         </scene>
-        <!--Verify View Controller-->
+        <!--View Controller-->
         <scene sceneID="q8k-DL-RKd">
             <objects>
-                <viewController id="sPw-AV-ZPR" customClass="VerifyViewController" customModule="Sadanghaeng" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="sPw-AV-ZPR" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7vC-IH-iF0"/>
                         <viewControllerLayoutGuide type="bottom" id="YXS-OC-D8x"/>
@@ -1418,7 +1426,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BQb-uz-Zln" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1332.75" y="-403.5"/>
+            <point key="canvasLocation" x="2487.75" y="-403.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Nwl-Ud-9xx">
@@ -1521,7 +1529,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EJN-Wb-GJL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1968.75" y="-403.5"/>
+            <point key="canvasLocation" x="3129.75" y="-403.5"/>
         </scene>
         <!--Master-->
         <scene sceneID="NZv-az-znQ">
@@ -2267,7 +2275,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TXf-li-vZe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3398.25" y="247.5"/>
+            <point key="canvasLocation" x="4316.25" y="247.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="j7q-X7-jHI">
@@ -2288,6 +2296,24 @@
             </objects>
             <point key="canvasLocation" x="621.75" y="392.5"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iny-iH-9dj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eZE-di-Upd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gao-aa-ViV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sPw-AV-ZPR" kind="relationship" relationship="rootViewController" id="uZQ-hd-V4O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WKL-e3-gYv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1569" y="-404"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Inline-Logo" width="165" height="134"/>
@@ -2301,6 +2327,6 @@
         <image name="user" width="44" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XZx-oK-KIO"/>
+        <segue reference="G4z-vV-ZPh"/>
     </inferredMetricsTieBreakers>
 </document>
